# fastapi-tracker

./: .gitignore  pyproject.toml
fastapi_tracker/: example.py  tracker.py
